# durak-reinforcement-learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  roadmap.md
.claude/: settings.json
.devcontainer/: devcontainer.json
docs/: TRAINING-PLAN.md  cpp-learning.md  plan.md
docs/research/: technical-reading.md
docs/superpowers/specs/: 2026-04-03-dqn-training-infra-design.md
src/: agents.py  play_agents.py  play_durak_cli.py  test_dqn_agent.py  test_game_2players.py  test_obs_encode.py  test_replay_buffer.py  test_train.py
src/engine/: deck.py  fast_card.py  fast_game_state.py  game.py  game_state.py  obs_encode.py
src/engine/legacy/: card.py  deck.py  game.py  game_state.py
src/engine/old/: deck.py  game_state.py
src/training/: dqn_agent.py  env.py  random_opponent.py  replay_buffer.py  train.py
test/: test_fast_game.py  test_game_2players.py
